--- a/out.html
+++ b/out.html
@@ -174,60 +174,136 @@
 <body>
 <h1 id="energy-efficient-marine-inference">Energy-Efficient Marine
 Inference</h1>
-<p>This repository contains a collection of notebooks exploring
-energy-efficient machine learning and sensing strategies for
-low-disturbance marine observation. The focus is on approaches that
-minimize expensive resources such as movement, communication, and
-lighting. Below is an overview of each notebook:</p>
-<ul>
-<li><p><strong>A - Species inference from movement
-acoustics.ipynb</strong>: This notebook investigates whether acoustic
-signatures produced by animal movement near a hydrophone array can be
-used to infer species presence. I generate simple synthetic data and
-train a basic classifier. This approach avoids disturbing
-light-sensitive animals and eliminates the need for energy-intensive
-lighting, enabling long-term autonomous monitoring.</p>
-<p><img src="images/A%20-%20box_creature.gif" alt="box creature" width="360" />
-<img src="images/A%20-%20worm_creature.gif" alt="worm creature" width="360" /></p></li>
-<li><p><strong>B - Location optimization with Gaussian
-Processes.ipynb</strong>: This notebook provides an overview of Gaussian
-Process (GP) optimization, emphasizing its efficiency in sample usage.
-In a marine setting each sample of something like animal density is
-costly due to the need to raise and lower equipment.</p>
-<p><img src="images/B%20-%20GP_progress.png" alt="GP progress" width="360" /></p></li>
-<li><p><strong>C - Distributed event inference with communication
-costs.ipynb</strong>: Here, I explore how a network of stationary
-receivers can detect events against a noisy background. For example,
-this could involve detecting whale presence using multiple sensors
-arranged in a grid. I implement a standard approach where signals are
-first aggregated between nodes, and then explore a
-communication-efficient variant where each node performs local inference
-and only transmits a message if a threshold is met. Aggregation of
-messages must account for accidental triggering.</p>
-<p><img src="images/C%20-%20Noise_with_signal.png" alt="Noise with signal" width="360" />
-<img src="images/C%20-%20array_and_signals.png" alt="Array and signals" width="360" />
-<img src="images/C%20-%20score_grid.png" alt="Score grid" width="360" /></p></li>
-<li><p><strong>D - Location optimization with an energy
-budget.ipynb</strong>: This notebook extends the GP-based location
-optimization from Notebook B to explicitly consider energy or battery
-constraints. While standard GP optimization is efficient in the number
-of samples, traveling between locations might incur some cost in some
-scenarios. I explore information-theoretic approaches and test methods
-for downweighting expected improvement based on travel distance.</p>
-<p><img src="images/D%20-%20gp_with_budget.png" alt="GP with budget" width="360" /></p></li>
-<li><p><strong>E - Optimization with rare events.ipynb</strong>: This
-notebook looks at the challenge of nagivating to an area with a high
-number of events per unit time when you only see events rather than the
-underlying code. Consider an autonomous robot trying to find the point
-of highest animal density in a particular area. The underlying data
-comes from a continuous version of the multi-armed bandit problem, or an
-Inhomogenous Poisson Process. I test out a solution where the events
-over time are turned into a events-per-unit-time plot as the robot
-moves, and from that plot I look at reconstructing the full
-multidimensional function.</p>
-<p><img src="images/E%20-%20path_true_function.png" alt="Score grid" width="360" />
-<img src="images/E%20-%20samples_path_example.png" alt="Events over time and the true density" width="360" />
-<img src="images/E%20-%20path_inferred_function.png" alt="Score grid" width="360" /></p></li>
-</ul>
+<p>This repository contains a collection of exploratory notebooks on
+<strong>energy-efficient machine learning and sensing for
+low-disturbance marine observation</strong>. The core theme is
+minimizing expensive or ecologically disruptive resources—such as
+movement, communication, and artificial lighting—while still enabling
+robust inference.</p>
+<p>Each notebook focuses on a distinct inference or optimization problem
+motivated by autonomous or long-duration marine deployments.</p>
+<hr />
+<h2 id="a-species-inference-from-movement-acoustics">A — Species
+Inference from Movement Acoustics</h2>
+<p><strong>Notebook:</strong>
+<code>A - Species inference from movement acoustics.ipynb</code></p>
+<p>This notebook explores whether <strong>acoustic signatures generated
+by animal movement</strong> near a hydrophone array can be used to infer
+species presence. Using simple synthetic creatures and simulated
+acoustic responses, I train a basic classifier to distinguish species
+based solely on movement-induced sound.</p>
+<p>This approach avoids disturbing light-sensitive animals and
+eliminates the need for energy-intensive lighting, making it suitable
+for long-term autonomous monitoring.</p>
+<p align="center">
+<img src="images/A%20-%20box_creature.gif" alt="Box creature" width="320"/>
+<img src="images/A%20-%20worm_creature.gif" alt="Worm creature" width="320"/>
+</p>
+<p align="center">
+<em>Simulated creatures used to generate movement-based acoustic
+signatures.</em>
+</p>
+<hr />
+<h2 id="b-location-optimization-with-gaussian-processes">B — Location
+Optimization with Gaussian Processes</h2>
+<p><strong>Notebook:</strong>
+<code>B - Location optimization with Gaussian Processes.ipynb</code></p>
+<p>This notebook provides an overview of <strong>Gaussian Process
+(GP)–based optimization</strong>, emphasizing its efficiency in sample
+usage. In a marine context, each sample (e.g. animal density, chemical
+concentration) may require raising and lowering equipment, making sample
+efficiency critical.</p>
+<p align="center">
+<img src="images/B%20-%20GP_progress.png" alt="Gaussian Process optimization progress" width="720"/>
+</p>
+<p align="center">
+<em>Evolution of the GP posterior and acquisition function during
+optimization.</em>
+</p>
+<hr />
+<h2 id="c-distributed-event-inference-with-communication-costs">C —
+Distributed Event Inference with Communication Costs</h2>
+<p><strong>Notebook:</strong>
+<code>C - Distributed event inference with communication costs.ipynb</code></p>
+<p>Here, I study <strong>event detection in a network of stationary
+receivers</strong> operating in a noisy environment—e.g. detecting whale
+calls using a spatially distributed hydrophone grid.</p>
+<p>I compare: - A standard centralized aggregation approach, and<br />
+- A communication-efficient variant where nodes perform local inference
+and only transmit when a confidence threshold is exceeded.</p>
+<p>Special care is required to handle accidental or spurious triggers
+during aggregation.</p>
+<p align="center">
+<img src="images/C%20-%20Noise_with_signal.png" alt="Noise with signal" width="320"/>
+</p>
+<p align="center">
+<em>Example of a weak signal embedded in background noise.</em>
+</p>
+<p align="center">
+<img src="images/C%20-%20array_and_signals.png" alt="Sensor array and signals" width="720"/>
+</p>
+<p align="center">
+<em>Sensor grid layout and corresponding received signals.</em>
+</p>
+<p align="center">
+<img src="images/C%20-%20score_grid.png" alt="Event score grid" width="320"/>
+</p>
+<p align="center">
+<em>Spatial score grid after distributed inference.</em>
+</p>
+<hr />
+<h2 id="d-location-optimization-with-an-explicit-energy-budget">D —
+Location Optimization with an Explicit Energy Budget</h2>
+<p><strong>Notebook:</strong>
+<code>D - Location optimization with an energy budget.ipynb</code></p>
+<p>This notebook extends the GP-based location optimization from
+<strong>Notebook B</strong> by explicitly incorporating <strong>energy
+or battery constraints</strong>. While GP optimization is
+sample-efficient, movement between locations may dominate total energy
+expenditure.</p>
+<p>I explore: - Information-theoretic acquisition functions, and<br />
+- Methods for down-weighting expected improvement based on travel
+distance.</p>
+<p align="center">
+<img src="images/D%20-%20gp_with_budget.png" alt="GP optimization with energy budget" width="720"/>
+</p>
+<p align="center">
+<em>GP optimization behavior when travel cost is explicitly
+penalized.</em>
+</p>
+<hr />
+<h2 id="e-optimization-with-rare-events">E — Optimization with Rare
+Events</h2>
+<p><strong>Notebook:</strong>
+<code>E - Optimization with rare events.ipynb</code></p>
+<p>This notebook addresses the challenge of navigating toward regions
+with <strong>high event rates</strong> when the underlying function is
+unobserved. A motivating example is an autonomous robot attempting to
+locate the area of highest animal density when it only observes discrete
+events (e.g. detections or encounters).</p>
+<p>The problem can be framed as inference over an <strong>inhomogeneous
+Poisson process</strong>, closely related to a continuous multi-armed
+bandit. I test an approach where observed events are converted into an
+events-per-unit-time signal along the robot’s path, which is then used
+to reconstruct the full spatial intensity function.</p>
+<p align="center">
+<img src="images/E%20-%20path_true_function.png" alt="True underlying density" width="320"/>
+</p>
+<p align="center">
+<em>True underlying event intensity function.</em>
+</p>
+<p align="center">
+<img src="images/E%20-%20samples_path_example.png" alt="Samples along path" width="720"/>
+</p>
+<p align="center">
+<em>Observed events over time along the robot’s trajectory.</em>
+</p>
+<p align="center">
+<img src="images/E%20-%20path_inferred_function.png" alt="Inferred density" width="320"/>
+</p>
+<p align="center">
+<em>Reconstructed spatial intensity function from sparse event
+data.</em>
+</p>
 </body>
 </html>
